fixed overlapping pfp logic

--- a/src/SideBar/SideBar.module.css
+++ b/src/SideBar/SideBar.module.css
@@ -2,26 +2,30 @@
 	/* background-color: blue; */
 	display: flex;
 	flex-direction: column;
-	border: 1px black solid;
 	grid-column: 1 / 4;
 	grid-row: 3 / 20;
 }
 
 #profile {
-	background-color: pink;
+	flex: 4 4;
 	display: flex;
 	flex-direction: column;
+	justify-content: flex-end;
+}
+
+#profile_container {
+	height: 50%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
 	align-items: center;
 	overflow: visible;
-	height: 10rem;
-	flex: 4 4;
-	cursor: pointer;
 }
 
 #profile_pic {
 	aspect-ratio: 1 / 1;
-	height: 85%;
-	background-color: gray;
+	width: 75%;
 	border-radius: 50%;
 	margin: .5rem;
 }
