--- a/src/Universal.module.css
+++ b/src/Universal.module.css
@@ -46,3 +46,7 @@
 .submit_field {
 	border-radius: 1rem;
 }
+
+.img_placeholder {
+	background-color: gray;
+}
